AST indexing feature added
